fix: spacing on form sections

--- a/source/scss/modules/_form.scss
+++ b/source/scss/modules/_form.scss
@@ -1,9 +1,9 @@
 .form { @include rem(margin, 4, 0); }
 .form__section {
   box-sizing: border-box;
-  @include rem( padding, 0, 0, 2, 0 );
+  @include rem( padding, 0, 0, 1, 0 );
   @include sb-media( 45em ) {
-    @include rem( padding, 0, 0, 2, 1.5 );
+    @include rem( padding, 0, 0, 1, 1.5 );
   }
 }
 .form__label {
